--- a/clickygame/package.json
+++ b/clickygame/package.json
@@ -1,8 +1,10 @@
 {
   "name": "clickygame",
+  "homepage" : "http://jennyelisa.github.io/clickygame",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
